--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0-rc.2",
+    "react-leaflet": "^4.2.1"
     "react-leaflet-cluster": "^3.1.1",
     "react-leaflet-fullscreen": "^4.1.1",
     "react-leaflet-textpath": "^2.1.1",
